should_throw_exception_if_transitive_dependency_not_found