@@ -8,6 +8,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static java.util.Arrays.stream;
 
@@ -23,13 +24,13 @@ public class Context {
         Constructor<Implementation> injectConstructor = getInjectConstructor(implementation);
         // target: new XXX(injectConstructor)
         // return () -> getImplementation(injectConstructor);
-        providers.put(type, new ConstructorInjectionProvider(this, injectConstructor));
+        providers.put(type, new ConstructorInjectionProvider(this, type, injectConstructor));
     }
 
 
     private <Type> Constructor<Type> getInjectConstructor(Class<Type> implementation) {
         List<Constructor<?>> injectConstructors = stream(implementation.getConstructors())
-                .filter(c -> c.isAnnotationPresent(Inject.class)).toList();
+                .filter(c -> c.isAnnotationPresent(Inject.class)).collect(Collectors.toList());
 
         if (injectConstructors.size() > 1) throw new IllegalComponentException();
 
@@ -46,4 +47,5 @@ public class Context {
     public <Type> Optional<Type> get(Class<Type> type) {
         return Optional.ofNullable(providers.get(type)).map(provider -> (Type)provider.get());
     }
+
 }
